--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rikishi/jquery",
+  "name": "@amilabs/jquery",
   "title": "jQuery 2.2.4 Patched",
   "description": "jQuery 2.2.4 + vulnerability patches",
   "version": "2.2.4",
